--- a/frontend/src/app/header/header.component.css
+++ b/frontend/src/app/header/header.component.css
@@ -108,3 +108,27 @@ header{
     background:#751178;
     color: white;
 }
+
+.dropdown{
+    background-color: white;
+}
+
+
+.dropdown-menu li {
+
+    font-size: 1.5rem;
+    margin: 1.5rem;
+    
+}
+
+.dropdown-menu li a {
+    text-decoration: none;
+    color: #751178;
+}
+
+.dropdown-menu li a:hover{
+    
+    color: #3b103d;
+    
+}
+
