--- a/frontend/src/app/registration/registration.component.html
+++ b/frontend/src/app/registration/registration.component.html
@@ -35,7 +35,7 @@
                         <a href="#">Already have an account</a>
                     </form> 
 
-                    <a class="btn">Log In </a>
+                    <a routerLink="/login" class="btn">Log In </a>
                     
             </div>
 
